# org-w3-svg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION.md  README.md  RELEASE.md  deps.edn  package-lock.json  package.json  pyproject.toml  tsconfig.web.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  npm-publish.yml  pages.yml
docs/: app.d.ts  app.js  index.html  pptxsvg-web-editor.md  svgraph-web-editor.md
docs/adr/: 0001-svg-semantic-ir.md  0001-svgraph.md
examples/: color.dml  line-arrow.dml  line-invalid-dash.dml  make_pptx.py  picture.dml  preset.dml  table-border-effects.dml  table-rich.dml  table-scaled-insets.dml  text-baseline-threshold.dml  text-bullets.dml  text-layout.dml  text-style.dml
src/drawingml_svg/: __init__.py  cli.py  converter.py  coverage.py  ir.py  pptx.py  svgraph.py
src/svg/: core.cljc  css.cljc  reader.cljc  shapes.cljc
src/svgraph/: __init__.py  cli.py  converter.py  coverage.py  model.py  pptx.py
test/svg/: core_test.clj  reader_test.clj  real_file_test.clj
tests/: test_converter.py  test_ir.py  test_migration.py  test_svgraph.py
web/: app.ts
