[project]
name = "drawingml-svg"
version = "0.1.0"
description = "Small, dependency-free converter between SVG, SVGraph, DrawingML, and PPTX."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Jun Kawasaki", email = "jun784@gmail.com" },
]
keywords = ["drawingml", "svg", "svgraph", "ooxml", "pptx", "converter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
  "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
  "Topic :: Text Processing :: Markup :: XML",
]

[project.urls]
Homepage = "https://github.com/com-junkawasaki/drawingml-svg"
Repository = "https://github.com/com-junkawasaki/drawingml-svg"
Issues = "https://github.com/com-junkawasaki/drawingml-svg/issues"

[project.scripts]
drawingml-svg = "drawingml_svg.cli:main"
dml2svg = "drawingml_svg.cli:main"
svg2dml = "drawingml_svg.cli:main"
svg2pptx = "drawingml_svg.cli:main"
drawingml-svg-analyze = "drawingml_svg.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drawingml_svg = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
