[project]
name = "svgraph"
version = "0.1.0"
description = "Small, dependency-free converter between SVG, SVGraph, DrawingML, and PPTX."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Jun Kawasaki", email = "jun784@gmail.com" },
]
keywords = ["drawingml", "svg", "svgraph", "ooxml", "pptx", "converter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
  "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
  "Topic :: Text Processing :: Markup :: XML",
]

[project.urls]
Homepage = "https://github.com/com-junkawasaki/svgraph"
Repository = "https://github.com/com-junkawasaki/svgraph"
Issues = "https://github.com/com-junkawasaki/svgraph/issues"

[project.scripts]
svgraph = "svgraph.cli:main"
drawingml-svg = "svgraph.cli:main"
dml2svg = "svgraph.cli:main"
svg2dml = "svgraph.cli:main"
svg2pptx = "svgraph.cli:main"
drawingml-svg-analyze = "svgraph.cli:main"

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
drawingml_svg = ["py.typed"]
svgraph = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
